--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+once_cell = { version = "1.19.0", features = ["parking_lot"] }
+parking_lot = "0.12.3"
+thiserror = "1.0.64"
