--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
-[package]
-name = "rusty-injector"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-once_cell = { version = "1.19.0", features = ["parking_lot"] }
-parking_lot = "0.12.3"
-thiserror = "1.0.64"
+[workspace]
+resolver = "2"
+members = [
+    "rusty-injector",
+    "rusty-injector-macros",
+]
