--- a/rusty-injector-macros/Cargo.toml
+++ b/rusty-injector-macros/Cargo.toml
@@ -1,7 +1,19 @@
 [package]
 name = "rusty-injector-macros"
 version = "0.1.0"
-edition = "2021"
+# Inherited.
+rust-version.workspace = true
+edition.workspace = true
+authors.workspace = true
+homepage.workspace = true
+repository.workspace = true
+readme.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
+
+# [lints]
+# workspace = true
 
 [lib]
 proc-macro = true
