--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rust: [nightly, beta, stable, 1.62.0]
+        rust: [nightly, beta, stable, 1.64.0]
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@v4
@@ -71,7 +71,9 @@ jobs:
         with:
           components: rust-src
       - uses: dtolnay/install@cargo-docs-rs
-      - run: cargo docs-rs
+      - run: |
+          cargo docs-rs -p rusty-injector
+          cargo docs-rs -p rusty-injector-macros
 
   clippy:
     name: Clippy
