--- a/rusty-injector/Cargo.toml
+++ b/rusty-injector/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rusty-injector"
 version = "0.1.0"
+description = "A lightweight run-time dependency injection framework for Rust"
 # Inherited.
 rust-version.workspace = true
 edition.workspace = true
@@ -16,15 +17,12 @@ categories.workspace = true
 # workspace = true
 
 [features]
-default = ["multithread"]
-hashbrown = ["dep:hashbrown"]
-multithread = []
+default = ["multithread", "derive"]
+multithread = ["rusty-injector-core/multithread"]
+derive = ["dep:rusty-injector-macros"]
 
 [dependencies]
-once_cell = { version = "1", features = ["parking_lot"] }
-parking_lot = "0.9"
-thiserror = "1"
-inventory = "0.3"
+rusty-injector-core = { path = "../rusty-injector-core", default-features = false }
 
 # Optional dependencies
-hashbrown = { version = "0", optional = true }
+rusty-injector-macros = { workspace = true, optional = true }
