chore: rename to ferrunix

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,20 @@
 [workspace]
 resolver = "2"
 members = [
-    "rusty-injector",
-    "rusty-injector-*",
+    "ferrunix",
+    "ferrunix-*",
     "examples/*",
     "xtask",
 ]
 # Only check / build main crates by default (check all with `--workspace`)
-default-members = ["rusty-injector", "rusty-injector-*"]
+default-members = ["ferrunix", "ferrunix-*"]
 
 [workspace.package]
 rust-version = "1.64"
 edition = "2021"
 authors = ["Arvid Gerstmann <github@arvid.io>"]
-homepage = "https://github.com/Leandros/rusty-injector"
-repository = "https://github.com/Leandros/rusty-injector"
+homepage = "https://github.com/Leandros/ferrunix"
+repository = "https://github.com/Leandros/ferrunix"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 keywords = ["dependency-injection", "inversion-of-control", "dependency-inversion", "di", "ioc"]
@@ -22,9 +22,9 @@ categories = ["development-tools", "rust-patterns", "config", "data-structures"]
 exclude = ["*.png", "*.svg", "rustfmt.toml", "xtask"]
 
 [workspace.dependencies]
-rusty-injector = { path = "./rusty-injector" }
-rusty-injector-core = { path = "./rusty-injector-core" }
-rusty-injector-macros = { path = "./rusty-injector-macros" }
+ferrunix = { path = "./ferrunix" }
+ferrunix-core = { path = "./ferrunix-core" }
+ferrunix-macros = { path = "./ferrunix-macros" }
 
 # Lints from compiler.
 [workspace.lints.rust]
