fix: specify version of dependency for publishing

--- a/ferrunix-macros/Cargo.toml
+++ b/ferrunix-macros/Cargo.toml
@@ -20,11 +20,12 @@ categories.workspace = true
 proc-macro = true
 
 [features]
-default = ["development"]
+default = ["development", "multithread"]
+multithread = ["ferrunix-core/multithread"]
 development = ["syn/extra-traits", "dep:prettyplease"]
 
 [dependencies]
-ferrunix-core.workspace = true
+ferrunix-core = { path = "../ferrunix-core", default-features = false, version = "0.1.0" }
 
 syn = { version = "2", features = ["extra-traits"] }
 prettyplease = { version = "0.2", optional = true }
