--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -22,7 +22,7 @@ multithread = ["ferrunix-core/multithread"]
 derive = ["dep:ferrunix-macros"]
 
 [dependencies]
-ferrunix-core = { path = "../ferrunix-core", default-features = false }
+ferrunix-core = { path = "../ferrunix-core", default-features = false, version = "0.1.0" }
 
 # Optional dependencies
 ferrunix-macros = { workspace = true, optional = true }
