--- a/book/book.toml
+++ b/book/book.toml
@@ -3,4 +3,4 @@ authors = ["Arvid Gerstmann"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Rusty Injector Documentation"
+title = "Ferrunix Documentation"
