--- a/ferrunix-macros/Cargo.toml
+++ b/ferrunix-macros/Cargo.toml
@@ -2,13 +2,13 @@
 name = "ferrunix-macros"
 version = "0.1.0"
 description = "Proc-macro for ferrunix"
+readme = "README.md"
 # Inherited.
 rust-version.workspace = true
 edition.workspace = true
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
-readme.workspace = true
 license.workspace = true
 keywords.workspace = true
 categories.workspace = true
