--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -2,13 +2,13 @@
 name = "ferrunix"
 version = "0.1.0"
 description = "A lightweight run-time dependency injection framework for Rust"
+readme = "README.md"
 # Inherited.
 rust-version.workspace = true
 edition.workspace = true
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
-readme.workspace = true
 license.workspace = true
 keywords.workspace = true
 categories.workspace = true
