--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: 'book'
+          # Upload entire book at the root.
+          path: '/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
