fix: disable miri strict provenance
This allows us to run miri with parking_lot.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,8 +99,9 @@ jobs:
       - uses: dtolnay/rust-toolchain@miri
       - run: cargo miri setup
       - run: cargo miri test
-        env:
-          MIRIFLAGS: -Zmiri-strict-provenance
+        # parking_lot doesn't support strict provenance yet.
+        # env:
+        #   MIRIFLAGS: -Zmiri-strict-provenance
 
   outdated:
     name: Outdated
