--- a/ferrunix-macros/Cargo.toml
+++ b/ferrunix-macros/Cargo.toml
@@ -13,8 +13,8 @@ license.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
-# [lints]
-# workspace = true
+[lints]
+workspace = true
 
 [lib]
 proc-macro = true
