feat: add `multithread` feature
By enabling the `multithread` feature, the registry is made `Send +
Sync`, and requires all types to be registered itself to be `Send +
Sync`.

The feature is enabled by default; but can be disabled by disabling the
default features. This makes the registry essentially single threaded.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,14 @@ jobs:
       - name: Enable nightly-only tests
         run: echo RUSTFLAGS=${RUSTFLAGS}\ --cfg=thiserror_nightly_testing >> $GITHUB_ENV
         if: matrix.rust == 'nightly'
-      - run: cargo test --all
+      - run: cargo test -p ferrunix --no-default-features
+      - run: cargo test -p ferrunix --no-default-features -F derive
+      - run: cargo test -p ferrunix --no-default-features -F derive,multithread
+      - run: cargo test -p ferrunix-core --no-default-features
+      - run: cargo test -p ferrunix-core --no-default-features -F multithread
+      - run: cargo test -p ferrunix-macros --no-default-features
+      - run: cargo test -p ferrunix-macros --no-default-features -F multithread
+      - run: cargo test -p ferrunix-macros --no-default-features -F multithread,development
       - uses: actions/upload-artifact@v4
         if: matrix.rust == 'nightly' && always()
         with:
