--- a/ferrunix-core/Cargo.toml
+++ b/ferrunix-core/Cargo.toml
@@ -18,10 +18,10 @@ workspace = true
 
 [features]
 default = ["multithread"]
-multithread = ["dep:once_cell", "dep:parking_lot"]
+multithread = ["once_cell/parking_lot"]
 
 [dependencies]
-once_cell = { version = "1.11", features = ["parking_lot"], optional = true }
-parking_lot = { version = "0.12", optional = true }
+once_cell = { version = "1.11" }
+parking_lot = { version = "0.12" }
 thiserror = "1"
 inventory = "0.3.1"
