chore: specify exact versions

--- a/ferrunix-macros/Cargo.toml
+++ b/ferrunix-macros/Cargo.toml
@@ -25,7 +25,7 @@ multithread = ["ferrunix-core/multithread"]
 development = ["syn/extra-traits", "dep:prettyplease"]
 
 [dependencies]
-ferrunix-core = { path = "../ferrunix-core", default-features = false, version = "0.1.0" }
+ferrunix-core = { path = "../ferrunix-core", default-features = false, version = "=0.1.0" }
 
 syn = { version = "2", features = ["extra-traits"] }
 prettyplease = { version = "0.2", optional = true }
