--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -22,8 +22,8 @@ multithread = ["ferrunix-core/multithread"]
 derive = ["dep:ferrunix-macros"]
 
 [dependencies]
-ferrunix-core = { path = "../ferrunix-core", default-features = false, version = "0.1.0" }
-ferrunix-macros = { path = "../ferrunix-macros", optional = true, version = "0.1.0" }
+ferrunix-core = { path = "../ferrunix-core", default-features = false, version = "=0.1.0" }
+ferrunix-macros = { path = "../ferrunix-macros", optional = true, version = "=0.1.0" }
 
 [dev-dependencies]
 thiserror = "1"
