--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,12 @@
 edition = "2021"
 max_width = 80
+use_field_init_shorthand = true
+
+# Nightly only:
+# format_strings = true
+# wrap_comments = true
+
+# Error if unable to get comments or string literals within `max_width`.
+# Without this option rustfmt often silently gives up formatting the entire file.
+# Setting it at least allows us to catch unformatted code in CI.
+# error_on_unformatted = true
