--- a/cliff.toml
+++ b/cliff.toml
@@ -33,11 +33,14 @@ initial_tag = "0.2.0"
 [changelog]
 # template for the changelog header
 header = """
-# Changelog\n
-All notable changes to this project will be documented in this file.
+# Changelog
 
-The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
-and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
+All notable changes of this project will be documented in this file.
+This project is following [semantic versioning](http://semver.org), and the format
+of the changelog is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).
+
+Deprecated features will be kept for any following maintenance release, and
+will be removed after two major releases.\n
 """
 # template for the changelog body
 # https://keats.github.io/tera/docs/#introduction
