--- a/ferrunix-core/Cargo.toml
+++ b/ferrunix-core/Cargo.toml
@@ -19,7 +19,7 @@ workspace = true
 [features]
 default = ["multithread", "tokio"]
 multithread = ["once_cell/parking_lot"]
-tokio = ["dep:tokio", "dep:futures"]
+tokio = ["dep:tokio", "dep:async-trait"]
 
 [dependencies]
 once_cell = { version = "1.11" }
@@ -27,4 +27,4 @@ parking_lot = "0.12"
 thiserror = "1"
 inventory = "0.3.1"
 tokio = { version = "1.5", default-features = false, features = ["sync"], optional = true }
-futures = { version = "0.3.11", optional = true }
+async-trait = { version = "0.1", optional = true }
