--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -28,3 +28,4 @@ ferrunix-macros = { path = "../ferrunix-macros", optional = true, version = "=0.
 
 [dev-dependencies]
 thiserror = "1"
+tokio = { version = "1", features = ["full"] }
