--- a/ferrunix-core/Cargo.toml
+++ b/ferrunix-core/Cargo.toml
@@ -28,3 +28,6 @@ thiserror = "1"
 inventory = "0.3.1"
 tokio = { version = "1.5", default-features = false, features = ["sync"], optional = true }
 async-trait = { version = "0.1", optional = true }
+
+[package.metadata."docs.rs"]
+all-features = true
