--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -29,3 +29,6 @@ ferrunix-macros = { path = "../ferrunix-macros", optional = true, version = "=0.
 [dev-dependencies]
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
+
+# [package.metadata."docs.rs"]
+# all-features = true
