--- a/ferrunix-core/Cargo.toml
+++ b/ferrunix-core/Cargo.toml
@@ -26,7 +26,7 @@ once_cell = { version = "1.11" }
 parking_lot = "0.12"
 thiserror = "1"
 inventory = "0.3.1"
-tokio = { version = "1.5", default-features = false, features = ["sync"], optional = true }
+tokio = { version = "1.5", default-features = false, features = ["sync", "parking_lot"], optional = true }
 async-trait = { version = "0.1", optional = true }
 
 [package.metadata."docs.rs"]
