--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -28,7 +28,7 @@ ferrunix-macros = { path = "../ferrunix-macros", optional = true, version = "=0.
 
 [dev-dependencies]
 thiserror = "1"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "=1.21", features = ["full"] }
 async-trait = "0.1"
 
 # [package.metadata."docs.rs"]
