--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -14,4 +14,4 @@ workspace = true
 [dependencies]
 xshell = "0.2"
 anyhow = "1"
-clap = { version = "4", features = ["derive"] }
+clap = { version = "=4.1.14", features = ["derive"] }
