--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ noop_method_call = "warn"
 elided_lifetimes_in_paths = "warn"
 explicit_outlives_requirements = "warn"
 unsafe_op_in_unsafe_fn = "warn"
-unused_extern_crates = "warn"
+unused_extern_crates = "allow"
 unused_lifetimes = "warn"
 
 # Lints from Clippy: <https://rust-lang.github.io/rust-clippy/master/index.html>
