--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -30,10 +30,10 @@ ferrunix-macros = { path = "../ferrunix-macros", optional = true, version = "=0.
 thiserror = "1"
 tokio = { version = "=1.21", features = ["full"] }
 async-trait = "0.1"
-skeptic = "0.13"
+skeptic = "=0.13.5"
 
 [build-dependencies]
-skeptic = "0.13"
+skeptic = "=0.13.5"
 
 # [package.metadata."docs.rs"]
 # all-features = true
