--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -30,10 +30,10 @@ ferrunix-macros = { path = "../ferrunix-macros", optional = true, version = "=0.
 thiserror = "1"
 tokio = { version = "=1.21", features = ["full"] }
 async-trait = "0.1"
-skeptic = "=0.13.5"
+skeptic = { git = "https://github.com/Leandros/rust-skeptic.git", rev = "45d69d27c3ee1f0cf66072053bb6f88c1be0e07b" }
 
 [build-dependencies]
-skeptic = "=0.13.5"
+skeptic = { git = "https://github.com/Leandros/rust-skeptic.git", rev = "45d69d27c3ee1f0cf66072053bb6f88c1be0e07b" }
 
 # Docs about this available here <https://docs.rs/about/metadata>
 [package.metadata."docs.rs"]
