--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ members = [
 default-members = ["ferrunix", "ferrunix-*"]
 
 [workspace.package]
-rust-version = "1.64"
+rust-version = "1.64" # 1.75.0 with the `tokio` feature
 edition = "2021"
 authors = ["Arvid Gerstmann <github@arvid.io>"]
 homepage = "https://github.com/Leandros/ferrunix"
