--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -21,6 +21,7 @@ default = ["derive"]
 multithread = ["ferrunix-core/multithread"]
 derive = ["dep:ferrunix-macros"]
 tokio = ["ferrunix-core/tokio", "ferrunix-macros?/tokio"]
+tracing = ["ferrunix-core/tracing"]
 
 [dependencies]
 ferrunix-core = { path = "../ferrunix-core", default-features = false, version = "=0.3.0" }
