--- a/ferrunix-core/Cargo.toml
+++ b/ferrunix-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ferrunix-core"
-version = "0.2.0"
+version = "0.3.0"
 description = "Core types, traits, and implementations for ferrunix"
 readme = "README.md"
 # Inherited.
@@ -17,11 +17,23 @@ categories.workspace = true
 workspace = true
 
 [features]
-default = ["multithread"]
+default = []
 multithread = ["once_cell/parking_lot"]
+tokio = ["dep:tokio", "dep:async-trait"]
+tracing = ["dep:tracing"]
 
 [dependencies]
 once_cell = { version = "1.11" }
 parking_lot = "0.12"
 thiserror = "1"
 inventory = "0.3.1"
+tokio = { version = "=1.24.2", default-features = false, features = ["rt", "sync", "parking_lot"], optional = true }
+async-trait = { version = "0.1", optional = true }
+tracing = { version = "0.1", optional = true }
+
+petgraph = { version = "0.6" }
+fixedbitset = { version = "=0.4.2" } # used/required by `petgraph`
+
+# Docs about this available here <https://docs.rs/about/metadata>
+[package.metadata."docs.rs"]
+features = ["multithread"]
