--- a/ferrunix-macros/Cargo.toml
+++ b/ferrunix-macros/Cargo.toml
@@ -20,13 +20,12 @@ workspace = true
 proc-macro = true
 
 [features]
-default = ["development", "multithread"]
-multithread = ["ferrunix-core/multithread"]
+default = ["development"]
+multithread = []
+tokio = []
 development = ["syn/extra-traits", "dep:prettyplease"]
 
 [dependencies]
-ferrunix-core = { path = "../ferrunix-core", default-features = false, version = "=0.2.0" }
-
 syn = { version = "2", features = ["extra-traits"] }
 prettyplease = { version = "0.2", optional = true }
 proc-macro2 = "1.0.60"
@@ -35,3 +34,7 @@ darling = "0.20"
 
 [dev-dependencies]
 thiserror = "1"
+
+# Docs about this available here <https://docs.rs/about/metadata>
+[package.metadata."docs.rs"]
+features = ["multithread"]
