--- a/deny.toml
+++ b/deny.toml
@@ -92,7 +92,8 @@ allow = [
     "MIT",
     "Apache-2.0",
     "Apache-2.0 WITH LLVM-exception",
-    "Unicode-DFS-2016"
+    "Unicode-DFS-2016",
+    "Zlib"
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
