--- a/doc-tests/Cargo.toml
+++ b/doc-tests/Cargo.toml
@@ -12,7 +12,7 @@ license.workspace = true
 workspace = true
 
 [dependencies]
-ferrunix = { path = "../ferrunix", default-features = false, features = ["derive", "multithread"], version = "=0.3.0" }
+ferrunix = { path = "../ferrunix", version = "=0.3.0" }
 
 [dev-dependencies]
 skeptic = { git = "https://github.com/Leandros/rust-skeptic.git", rev = "45d69d27c3ee1f0cf66072053bb6f88c1be0e07b" }
