--- a/deny.toml
+++ b/deny.toml
@@ -92,7 +92,10 @@ allow = [
     "MIT",
     "Apache-2.0",
     "Apache-2.0 WITH LLVM-exception",
+    # Both unicode licenses are imported through the `unicode-ident` crate
+    # `syn` depends on.
     "Unicode-DFS-2016",
+    "Unicode-3.0",
     "Zlib"
 ]
 # The confidence threshold for detecting a license from license text.
