--- a/deny.toml
+++ b/deny.toml
@@ -70,6 +70,7 @@ feature-depth = 1
 # A list of advisory IDs to ignore. Note that ignored advisories will still
 # output a note when they are encountered.
 ignore = [
+    { id = "RUSTSEC-2024-0436", reason = "the paste crate is only used in tests" },
     #"RUSTSEC-0000-0000",
     #{ id = "RUSTSEC-0000-0000", reason = "you can specify a reason the advisory is ignored" },
     #"a-crate-that-is-yanked@0.1.1", # you can also ignore yanked crate versions if you wish
@@ -92,10 +93,9 @@ allow = [
     "MIT",
     "Apache-2.0",
     "Apache-2.0 WITH LLVM-exception",
-    # Both unicode licenses are imported through the `unicode-ident` crate
+    # Unicode licenses are imported through the `unicode-ident` crate
     # `syn` depends on.
     "Unicode-DFS-2016",
-    "Unicode-3.0",
     "Zlib"
 ]
 # The confidence threshold for detecting a license from license text.
@@ -148,6 +148,7 @@ registries = [
 [bans]
 # Lint level for when multiple versions of the same crate are detected
 multiple-versions = "warn"
+multiple-versions-include-dev = false
 # Lint level for when a crate version requirement is `*`
 wildcards = "allow"
 # The graph highlighting used when creating dotgraphs for crates
