--- a/ferrunix-core/Cargo.toml
+++ b/ferrunix-core/Cargo.toml
@@ -27,13 +27,13 @@ once_cell = { version = "~1.20" }
 parking_lot = "0.12"
 thiserror = "1"
 inventory = "0.3.1"
-tokio = { version = "=1.24.2", default-features = false, features = ["rt", "sync", "parking_lot"], optional = true }
+tokio = { version = "1", default-features = false, features = ["rt", "sync", "parking_lot"], optional = true }
 async-trait = { version = "0.1", optional = true }
 tracing = { version = "0.1", optional = true }
 hashbrown = "0.15"
 
 petgraph = { version = "0.6" }
-fixedbitset = { version = "=0.4.2" } # used/required by `petgraph`
+fixedbitset = { version = "~0.4.2" } # used/required by `petgraph`
 
 # Docs about this available here <https://docs.rs/about/metadata>
 [package.metadata."docs.rs"]
