--- a/ferrunix/Cargo.toml
+++ b/ferrunix/Cargo.toml
@@ -29,7 +29,7 @@ ferrunix-macros = { path = "../ferrunix-macros", optional = true, version = "=0.
 
 [dev-dependencies]
 thiserror = "1"
-tokio = { version = "=1.24.2", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
 paste = "1.0"
 
