chore: don't use workspace dependencies in example

--- a/examples/derived/Cargo.toml
+++ b/examples/derived/Cargo.toml
@@ -9,5 +9,5 @@ authors.workspace = true
 license.workspace = true
 
 [dependencies]
-ferrunix.workspace = true
-thiserror = "1"
+ferrunix = { path = "../../ferrunix", features = ["multithread"] }
+thiserror = "2"
