--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "rust-analyzer.cargo.features": ["multithread", "derive"]
+  "rust-analyzer.cargo.features": ["multithread", "derive"],
+  "rust-analyzer.checkOnSave": true,
+  "rust-analyzer.check.command": "clippy"
 }
