--- a/ferrunix-core/Cargo.toml
+++ b/ferrunix-core/Cargo.toml
@@ -31,6 +31,7 @@ tokio = { version = "1", default-features = false, features = ["rt", "sync", "pa
 async-trait = { version = "0.1", optional = true }
 tracing = { version = "0.1", optional = true }
 hashbrown = "0.15"
+paste = "1"
 
 petgraph = { version = "0.6" }
 fixedbitset = { version = "~0.4.2" } # used/required by `petgraph`
