--- a/ferrunix-macros/Cargo.toml
+++ b/ferrunix-macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ferrunix-macros"
-version = "0.4.0"
+version = "0.5.0-alpha1"
 description = "Proc-macro for ferrunix"
 readme = "README.md"
 # Inherited.
