--- a/ferrunix-core/Cargo.toml
+++ b/ferrunix-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ferrunix-core"
-version = "0.5.0-alpha2"
+version = "0.5.0"
 description = "Core types, traits, and implementations for ferrunix"
 readme = "README.md"
 # Inherited.
